--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:theme="@style/GdxTheme" >
         <activity
             android:name="com.jump.game.AndroidLauncher"
-            android:label="@string/app_name" 
-            android:screenOrientation="landscape"
+            android:label="@string/app_name"
+            android:screenOrientation="landskape"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
